--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊複製模板.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊複製模板.html
@@ -24,10 +24,12 @@
                     <p class="ellipsis-line-5"></p>
                 </div>
 
-                <div
-                    class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
-                    <span>課程介紹</span>
-                </div>
+                <a class="collaborative-partner-highlight-content-button-link text-decoration-none">
+                    <div
+                        class="collaborative-partner-highlight-content-button d-flex justify-content-center align-items-center">
+                        <span>課程介紹</span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
