調整 簡介 delay time

--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
@@ -1,5 +1,6 @@
 <div id="collaborativePartnerIntroContainer">
-    <p id="collaborativePartnerIntroContent" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine">
+    <p id="collaborativePartnerIntroContent" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine"
+        data-aos-delay="800">
     </p>
 </div>
 <style type="text/css">
