--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
@@ -15,6 +15,7 @@
         width: 100vw;
         margin-top: 120px;
         height: 636px;
+        background-position: center;
     }
 
     #collaborativePartnerBackgroundContentContainer {
