--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊複製模板.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊複製模板.html
@@ -45,7 +45,9 @@
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="left-triangle d-none d-xl-block"></div>
-            <p class="collaborative-partner-feedback-content"></p>
+            <div class="collaborative-partner-feedback-content">
+                <div class="ellipsis-line-4"></div>
+            </div>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
     </div>
@@ -60,7 +62,9 @@
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="right-triangle d-none d-xl-block"></div>
-            <p class="collaborative-partner-feedback-content"></p>
+            <div class="collaborative-partner-feedback-content">
+                <div class="ellipsis-line-4"></div>
+            </div>
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
