--- a/DB/合作團隊_木創文化攪動深根計畫.html
+++ b/DB/合作團隊_木創文化攪動深根計畫.html
@@ -1,8 +1,10 @@
 <script>
     // 合作團隊主題
     const collaborativePartnerMain = {
-        'year': '109-110 學年度',
+        'year': '109-111 學年度',
         'title': '木創文化攪動深根計畫',
+        'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/438398622.png',
+        'link': '#',
     };
 
     // 合作團隊簡介
@@ -23,7 +25,7 @@
         {
             'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg',
             'name': '吳舜堂 教授',
-            'organization': '通識教務中心',
+            'organization': '單位：通識教務中心',
             'link': '',
             'from': `待補`,
             'skill': '待補。',
@@ -32,7 +34,7 @@
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337219271.jpg',
             'name': '張若菡 老師',
-            'organization': '工業設計系',
+            'organization': '單位：工業設計系',
             'link': '',
             'from': `待補`,
             'skill': '待補。',
@@ -41,7 +43,7 @@
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/763241224.jpg',
             'name': '林承謙 老師',
-            'organization': '商業設計系',
+            'organization': '單位：商業設計系',
             'link': '',
             'from': `待補`,
             'skill': '待補。',
@@ -50,7 +52,7 @@
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/836721579.png',
             'name': '范政揆 副教授',
-            'organization': '工業設計系',
+            'organization': '單位：工業設計系',
             'link': '',
             'from': `國立臺北科技大學\n創新設計研究所碩士`,
             'skill': '創新設計、設計策略、永續設計、醫療與健康產品開發',
@@ -59,7 +61,7 @@
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
             'name': '陳殿禮 教授',
-            'organization': '工業設計系',
+            'organization': '單位：工業設計系',
             'link': '',
             'from': `待補`,
             'skill': '待補。',
@@ -85,16 +87,19 @@
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/701482618.png',
+            'link': '#',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337140513.png',
+            'link': '#',
         },
         {
             'title': '內容待補',
             'intro': `內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。`,
             'image': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png',
+            'link': '#',
         },
     ]
 
