--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊簡介.html
@@ -9,6 +9,7 @@
         font-size: 20px;
         line-height: 1.6;
         color: #707070;
+        white-space: pre-line;
     }
 
     @media (min-width: 767px) {
