--- a/DB/校內下載.html
+++ b/DB/校內下載.html
@@ -9,7 +9,7 @@
         {
             'date': '2020-11-12',
             'title': '110年度USR種子計畫徵件辦法',
-            'fileLink': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/362298183.pdf',
+            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/362298183.pdf',
             'fileType': 'PDF',
         },
         {
