--- a/Utils/外部CDN模組.html
+++ b/Utils/外部CDN模組.html
@@ -10,18 +10,18 @@
     crossorigin="anonymous"></script>
 
 <!-- Font-Awesome  -->
-<link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    rel="stylesheet" />
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 <!-- Animate.css  -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+<link rel="stylesheet" href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3385/animate.min.css" />
 
 <!-- csshake -->
-<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+<link rel="stylesheet" type="text/css" href="https://osausr.ntut.edu.tw/var/file/1/1001/img/csshake.min.css">
 
 <!-- sweetalert2  -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3385/sweetalert2@9.js"></script>
 
 <!-- AOS  -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<link href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3385/aos.css" rel="stylesheet">
+<script src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3385/aos.js"></script>
