重構 場域地圖

--- a/DB/實踐成果_場域地圖.html
+++ b/DB/實踐成果_場域地圖.html
@@ -7,7 +7,7 @@
       * labelType: 標籤種類 (0: USR office 1: USR 附冊 2: USR HUB),
       * position: 地標位置 [距離頂端百分比, 距離左側百分比],
       * iconUrl: '計畫 Icon 連結',
-      * iconPosition: Icon 位置 [距離頂端百分比, 距離左側百分比]
+      * iconPosition: Icon 位置 [距離底部百分比, 距離左側百分比]
     */
     const activityRegionData = [
         {
@@ -16,9 +16,9 @@
             date: '2019.02-2019.10',
             location: '新竹',
             labelType: 1,
-            position: [13, 64],
-            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/5.png',
-            iconPosition: [62, 5],
+            position: [10, 68],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/432893948.png',
+            iconPosition: [9, 5],
         },
         {
             title: '木創文化攪動深根計畫',
@@ -26,9 +26,9 @@
             date: '2019.02-2019.10',
             location: '台中',
             labelType: 1,
-            position: [28, 58],
-            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/3.png',
-            iconPosition: [59, 5],
+            position: [18, 62],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/535937087.png',
+            iconPosition: [10, 5],
         },
         {
             title: '智慧物聯感測漁業-實現於雲林口湖鄉',
@@ -36,19 +36,19 @@
             date: '2019.02-2019.10',
             location: '雲林',
             labelType: 2,
-            position: [49, 50],
-            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/1.png',
-            iconPosition: [61, 5],
+            position: [40, 53],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/897341748.png',
+            iconPosition: [10, 5],
         },
         {
             title: '陶藝文化培力．鶯歌地方創生',
             url: 'https://osausr.ntut.edu.tw/p/426-1001-37.php?Lang=zh-tw',
             date: '2019.02-2019.10',
-            location: '桃園',
+            location: '新北',
             labelType: 2,
-            position: [9, 72],
-            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/7.png',
-            iconPosition: [58, 7],
+            position: [7, 76],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/248852121.png',
+            iconPosition: [10, 7],
         },
         {
             title: '營造永續貢學環境-文化扎根與創新',
@@ -56,9 +56,9 @@
             date: '2019.02-2019.10',
             location: '新北',
             labelType: 2,
-            position: [-1, 88],
-            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/4.png',
-            iconPosition: [58, 5],
+            position: [0, 94],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/791636662.png',
+            iconPosition: [15, 5],
         },
         {
             title: '青銀共創．友善療癒綠社區',
@@ -66,9 +66,9 @@
             date: '2019.02-2019.10',
             location: '台北',
             labelType: 2,
-            position: [0, 74],
+            position: [1, 79],
             iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/467968697.png',
-            iconPosition: [52, 4],
+            iconPosition: [9, 4],
         },
         {
             title: '善循環經濟的實踐',
@@ -76,9 +76,9 @@
             date: '2019.02-2019.10',
             location: '新北',
             labelType: 2,
-            position: [-5, 83],
+            position: [-3, 88],
             iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/865008933.png',
-            iconPosition: [57, 5],
+            iconPosition: [11, 5],
         },
         {
             title: '在地「富育」計畫－牡丹鄉－馬祖',
@@ -86,7 +86,7 @@
             date: '2019.02-2019.10',
             location: '馬祖',
             labelType: 2,
-            position: [10, 1],
+            position: [8, 2],
             iconUrl: '',
             iconPosition: [],
         },
@@ -96,7 +96,7 @@
             date: '2019.02-2019.10',
             location: '屏東',
             labelType: 2,
-            position: [70, 58],
+            position: [55, 58],
             iconUrl: '',
             iconPosition: [],
         },
@@ -106,7 +106,7 @@
             date: 'Since 2018',
             location: '台北',
             labelType: 0,
-            position: [0, 78],
+            position: [1, 83],
             iconUrl: '',
             iconPosition: [],
         },
