--- a/Desktop/實踐成果/場域地圖.html
+++ b/Desktop/實踐成果/場域地圖.html
@@ -166,6 +166,19 @@
             width: 30%;
         }
     }
+
+    @media(max-width: 767px) {
+        #activityRegionContainer {
+            height: 1200px;
+        }
+
+        #activityRegionContentContainer {
+            top: auto;
+            left: auto;
+            right: 3%;
+            bottom: 3%;
+        }
+    }
 </style>
 
 <script>
